[gd_scene load_steps=7 format=3 uid="uid://fc7wclswdtji"]

[ext_resource type="Script" path="res://barkley2/scripts/CC/cc_lottery.gd" id="1_l6p5s"]
[ext_resource type="Texture2D" uid="uid://ihdvet33tf7y" path="res://barkley2/assets/b2_original/images/cc/s_cc_lottery_ticket_0.png" id="2_8mp7d"]

[sub_resource type="Animation" id="Animation_et37c"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lottery_card:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(192, -120), Vector2(192, 120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lottery_bg:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.5)]
}

[sub_resource type="Animation" id="Animation_ugmdb"]
length = 0.001

[sub_resource type="Animation" id="Animation_q8nnl"]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lottery_card:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(192, 120), Vector2(192, -120)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("lottery_bg:color")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0.5), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_j46nl"]
_data = {
"RESET": SubResource("Animation_ugmdb"),
"hide": SubResource("Animation_q8nnl"),
"show": SubResource("Animation_et37c")
}

[node name="cc_lottery" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6p5s")

[node name="lottery_bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="lottery_card" type="Sprite2D" parent="."]
position = Vector2(192, -120)
texture = ExtResource("2_8mp7d")

[node name="done_button" type="Button" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 190.0
offset_right = 147.0
offset_bottom = 206.0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_j46nl")
}

[connection signal="button_down" from="done_button" to="." method="_on_done_button_button_down"]
